<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp"
    card_view:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/task_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/task_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_date"
            android:textAppearance="?android:attr/textAppearanceLarge"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/task_description"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/task_description"
            android:textAppearance="?android:attr/textAppearanceSmall"
            app:layout_constraintTop_toBottomOf="@id/task_title"
            card_view:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/linea"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#ffd5d5d5"
            app:layout_constraintTop_toBottomOf="@id/task_description"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent">

        </View>

        <ImageView
            android:id="@+id/compartir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/material_blue_grey_800"
            android:src="@android:drawable/ic_menu_share"
            app:layout_constraintTop_toBottomOf="@id/linea"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent" />


        <ImageView
            android:id="@+id/task_priority"
            android:layout_width="64dp"
            android:layout_height="32dp"
            android:layout_alignParentTop="true"
            android:background="@color/red"
            android:contentDescription="@string/priority_color"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>